--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Recomandation for library to install in python
 
+setuptools
 numpy 
 pandas 
 scipy
@@ -7,17 +8,12 @@ sklearn
 future
 grpcio
 h5py
-keras_applicationg
-keras_preprocessing
 requests
 opencv-python
-os-sys
 python-math
 random2
 pytest-warnings
-os-sys
 os.path2
-jsonlib
 pydicom
 glob2
 pytest-shutil
